# GCP

./: address_autofilling_utils.py  app.py  create_table.py  demo_create_table.py  insert_address_data.py  insert_data.py  models.py  pyproject.toml  requirements.txt
controllers/: phone_numbers_controller.py
prompts/: AER_Only_Prompt.py  Entity_Matching_Prompt.py  Reverse_AER.py
routes/: phone_numbers_routes.py
